version 1.0 -- UNRELEASED
    handler changes
	dup:
	 . Make the .dup generated by ninjahelper more consistent with
	   example.dup.
	 . Add support for RackSpace's CloudFiles.
	   Thanks to Yuval Kogman <nothingmuch@woobling.org> for the patch.
	 . Adapt for new duplicity SSH backend.
	   Support bandwidthlimit with new duplicity, using trickle.
	   (Closes: #657201)
	mysql:
	 . Don't attempt to dump performance_schema database (Redmine#3741).
	pgsql:
	 . Don't produce empty uncompressed backups (Redmine#3820).
	rdiff-backup:
	 . Use fatal function to report failure of rdiff-backup jobs as such.
	rysnc:
	 . Fix numericids option (Redmine#3691).
	 . Mangle $rsync_options just afterwards (Redmine#3702).
	 . Fix metadata rotation.
	 . Allow disabling rotation or setting 2 days as minimum for backup
	   increments in rsync short format (Redmine#2107).
	 . Use fatal instead of custom "exit 1" (Redmine#3721).
	 . Abort on rsync error (Redmine#3692).
	 . Cleanup orphaned metadata (Redmine#3727).
    build system changes
	 . Workaround automake sanity check that would prevent us from
	   installing lib/* into lib/backupninja/. Where else are be supposed
	   to install such files anyway?
    documentation changes
	 . Document what features available to .sh jobs (Redmine #1558).

version 0.9.10 -- September 23, 2011
    backupninja changes
	 . Fix email reports, that were broken by the new locking support.
    handler changes
	dup:
	 . Cleanup: stop supporting duplicity < 0.6.01 (Redmine#2538).
	 . Fix incorrect duplicity version check for keepincroffulls.
	   Thanks to Olivier Berger <oberger@ouvaton.org> for the patch.
	   (Closes Redmine bug #3443)
	   (Closes: #641120)
	ldap:
	 . Don't install LDAP handler, helper and example configuration file.
	   Don't mention LDAP support in documentation.
	   Official LDAP support will come back once this code has found
	   itself a maintainer. Interested? Get in touch!
	rsync:
	 . Fixing $rsync_options output when rsync is local