@@ -339,7 +339,11 @@ if [ ! $test ]; then
    exit_code=$?
    debug $output
    cat $outputfile | (while read output ; do
-                         info $output
+                         if [ $exit_code -eq 0 ]; then
+                            info $output
+                         else
+                            error $output
+                         fi
                       done
    )
    if [ $exit_code -eq 0 ]; then
