@@ -8,6 +8,8 @@ version 1.0 -- UNRELEASED
 	 . Adapt for new duplicity SSH backend.
 	   Support bandwidthlimit with new duplicity, using trickle.
 	   (Closes: #657201)
+	 . Report failure output at error loglevel so that it is emailed
+	   (Closes: #536858)
 	mysql:
 	 . Don't attempt to dump performance_schema database (Redmine#3741).
 	pgsql:
